<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LocationActivity">



    <TextView
        android:id="@+id/get_location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_get_location"
        android:textSize="@dimen/item_text_size"
        android:gravity="center"
        android:layout_margin="@dimen/item_margin"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/get_location"
            android:id="@+id/get_location_button"
            android:layout_weight="1"
            android:layout_margin="@dimen/item_margin"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/get_address"
            android:layout_weight="1"
            android:id="@+id/get_address_button"
            android:layout_margin="@dimen/item_margin"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_text"
        android:textSize="@dimen/item_text_size"
        android:gravity="center"
        android:layout_margin="@dimen/item_margin"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textview_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_text"
        android:textSize="@dimen/item_text_size"
        android:gravity="center"
        android:layout_margin="@dimen/item_margin"
        android:layout_gravity="center"/>


</LinearLayout>